<resources>
    <string name="app_name">BluetoothChat</string>
    <string name="send">发送</string>
    <string name="visiblity">蓝牙可见</string>
    <string name="find_device">查找设备‘</string>
    <string name="bonded_device">查看绑定的设备</string>
    <string name="waiting">等待连接</string>
    <string name="stop_waiting">停止等待</string>
    <string name="disconnect">断开</string>
    <string name="chat_hint">聊天框</string>
</resources>
