<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/enable_visiblity"
        app:showAsAction="withText"
        android:orderInCategory="100"
        android:title="@string/visiblity" />

    <item
        android:id="@+id/find_device"
        app:showAsAction="withText"
        android:orderInCategory="100"
        android:title="@string/find_device" />

    <item
        android:id="@+id/bonded_device"
        app:showAsAction="withText"
        android:orderInCategory="100"
        android:title="@string/bonded_device" />

    <item
        android:id="@+id/listening"
        app:showAsAction="withText"
        android:orderInCategory="100"
        android:title="@string/waiting" />

    <item
        android:id="@+id/stop_listening"
        app:showAsAction="withText"
        android:orderInCategory="100"
        android:title="@string/stop_waiting" />

    <item
        android:id="@+id/disconnect"
        app:showAsAction="withText"
        android:orderInCategory="100"
        android:title="@string/disconnect" />
</menu>